--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,11 @@
         "zendframework/zend-expressive-helpers": "^2.0",
         "zendframework/zend-stdlib": "^2.7 || ^3.0",
         "zendframework/zend-expressive-fastroute": "^1.0",
-        "zendframework/zend-servicemanager": "^2.7.3 || ^3.0",
+        "zendframework/zend-servicemanager": "^3.0",
         "ocramius/proxy-manager": "^1.0 || ^2.0",
         "zendframework/zend-expressive-zendviewrenderer": "^1.0",
-        "zendframework/zend-form": "^2.9"
+        "zendframework/zend-form": "^2.9",
+        "zendframework/zend-db": "^2.8"
     },
     "require-dev": {
         "codeception/codeception": "^2.2",
