--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,11 @@
         "zendframework/zend-db": "^2.8"
     },
     "require-dev": {
-        "codeception/codeception": "^2.2",
         "phpunit/phpunit": "^4.8",
         "squizlabs/php_codesniffer": "^2.3",
         "filp/whoops": "^1.1 || ^2.0",
-        "doctrine/migrations": "^1.4"
+        "doctrine/migrations": "^1.4",
+        "codeception/codeception": "^2.2"
     },
     "autoload": {
         "psr-4": {
