--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "zendframework/zend-expressive-zendviewrenderer": "^1.0",
         "zendframework/zend-form": "^2.9",
         "zendframework/zend-db": "^2.8"
+        "zenapply/php-google-shortener": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
