--- a/composer.json
+++ b/composer.json
@@ -18,16 +18,17 @@
     },
     "require": {
         "php": "^5.5 || ^7.0",
-        "roave/security-advisories": "dev-master",
-        "zendframework/zend-expressive": "^1.0",
-        "zendframework/zend-expressive-helpers": "^2.0",
-        "zendframework/zend-stdlib": "^2.7 || ^3.0",
-        "zendframework/zend-expressive-fastroute": "^1.0",
-        "zendframework/zend-servicemanager": "^3.0",
+        "doctrine/common": ">=2.1",
         "ocramius/proxy-manager": "^1.0 || ^2.0",
+        "roave/security-advisories": "dev-master",
+        "zendframework/zend-db": "^2.8",
+        "zendframework/zend-expressive": "^1.0",
+        "zendframework/zend-expressive-fastroute": "^1.0",
+        "zendframework/zend-expressive-helpers": "^2.0",
         "zendframework/zend-expressive-zendviewrenderer": "^1.0",
         "zendframework/zend-form": "^2.9",
-        "zendframework/zend-db": "^2.8"
+        "zendframework/zend-servicemanager": "^3.0",
+        "zendframework/zend-stdlib": "^2.7 || ^3.0",
         "zenapply/php-google-shortener": "^1.0"
     },
     "require-dev": {
